@@ -2708,8 +2708,8 @@ Options:
 \titem{nodetree} To specify which nodetree to use. If not defined, the default pubsub
   nodetree is used. Nodetrees are default and virtual. Only one nodetree can be used
   and is shared by all node plugins. 
-\titem{served\_hosts} \ind{options!served\_hosts}
-  This option allows to create additional pubsub virtual hosts in a single module instance.
+%\titem{served\_hosts} \ind{options!served\_hosts}
+%  This option allows to create additional pubsub virtual hosts in a single module instance.
 \end{description}
 
 Example:
@@ -2719,12 +2719,12 @@ Example:
     ...
     {mod_pubsub, [
                   {access_createnode, pubsub_createnode},
-                  {plugins, ["default", "pep"]},
-                  {served_hosts, ["example.com", "example.org"]}
+                  {plugins, ["default", "pep"]}
                  ]}
     ...
    ]}.
 \end{verbatim}
+%                  {served_hosts, ["example.com", "example.org"]}
 
 \subsection{\modregister{}}
 \label{modregister}
