@@ -1,5 +1,9 @@
 2008-01-30  Badlop  <badlop@process-one.net>
 
+	* doc/guide.tex: Removed the option served_hosts in mod_pubsub
+	because it does not work correctly yet (EJAB-504)
+	* doc/guide.html: Likewise
+
 	* src/mod_echo.erl: Put in comments the call to the educational
 	function do_client_version
 
